2003-01-27  Daniel Steffen  <das@users.sourceforge.net>

        * generic/tkTextIndex.c: added '#include <tclInt.h>' since the 
        code uses the TclUtfToUniChar macro from that file. [Bug 874745]

        * macosx/Wish.pbproj/project.pbxproj: removed erroneous reference
        to mkpsenc.tcl in bundle resources phase (mkpsenc.tcl is already
        part of the copy files phase to Resources/Scripts).

        * macosx/Makefile: added support for 'xcodebuild' on Mac OS X 10.3.

2004-01-25  Benjamin Riefenstahl  <Benjamin.Riefenstahl@epost.de>

	* macosx/tkMacOSXKeyboard.c: Fix regressions due to the last
	patches.

2004-01-25  Peter Spjuth  <peter.spjuth@space.se>
	* library/dialog.tcl:
	* library/msgbox.tcl: The dialogs were affected by the TIP#146
	implementation.  Added grid anchor commands to restore original
	behaviour.

2004-01-15  David Gravereaux <davygrvy@pobox.com>

	* win/tkWinSendCom.c:  Placed the requirement for the special COM
	libraries into the object file itself with #paragma comment (lib, ...)
	when built with VC++.  This will simplify linking for users of the
	static library.  uuid.lib is required for VC5.2, but is implicit
	with VC6.

	* win/makefile.vc:  Removed 'ole32.lib oleaut32.lib uuid.lib' from
	$(baselibs).

2004-01-12  David Gravereaux <davygrvy@pobox.com>

	* generic/tk3d.c:	All uses of 'panic' (the macro) changed
	* generic/tkBind.c:	to 'Tcl_Panic' (the function).  The #define
	* generic/tkBitmap.c:	of panic in tcl.h clearly states it is
	* generic/tkCanvArc.c:	deprecated in the comments.
	* generic/tkCanvBmap.c: [Tcl Patch 865264]
	* generic/tkCanvImg.c:
	* generic/tkCanvLine.c:
	* generic/tkCanvPoly.c:
	* generic/tkCanvText.c:
	* generic/tkCanvWind.c:
	* generic/tkColor.c:
	* generic/tkConfig.c:
	* generic/tkCursor.c:
	* generic/tkError.c:
	* generic/tkEvent.c:
	* generic/tkFocus.c:
	* generic/tkFont.c:
	* generic/tkFrame.c:
	* generic/tkGC.c:
	* generic/tkGrid.c:
	* generic/tkImgBmap.c:
	* generic/tkImgPhoto.c: